@@ -1,3 +1,7 @@
+2007-08-22  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Added Nikon Coolpix S200 (from Marius Groeger) 
+
 2007-08-03  Marcus Meissner  <marcus@jet.franken.de>
 
 	* ptp.h, ptp-pack.c: From libmtp:
